--- a/resources/css/home.css
+++ b/resources/css/home.css
@@ -63,6 +63,13 @@ html,body {
 	max-height: 66px;
 }
 
+.thread-meta {
+	min-width: 100px;
+	width: 100px;
+	font-size: 80%;
+	text-align: right;
+}
+
 .thread-title a {
 	display: inline-block;
 	height: 24px;
@@ -189,6 +196,24 @@ html,body {
 .btn-paginate-active {
 	box-shadow: 0px 0px 5px grey;
 }
+
+.hpx-100 {
+	height: 100px !important;
+}
+
+.h-fill-100 {
+	height: calc(100% - 100px) !important;
+}
+
+.thread-trending {
+	font-size: 85%;
+	color: yellow !important;
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	display: block;
+}
+
 
 @media(min-height: 470px) {
 	.my-avatar {
