Updated posts table to add sticky column, created posts seeder, set posts to display on home page

--- a/resources/css/home.css
+++ b/resources/css/home.css
@@ -152,6 +152,10 @@ html,body {
 	background: #474747;
 }
 
+.thread-sticky .thread-title a {
+	color: yellow;
+}
+
 .thread-hidden {
 	opacity: 0.35;
 }
