--- a/resources/css/forum-font.css
+++ b/resources/css/forum-font.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'forum-font';
-  src: url('../fonts/forum-font.eot?4305240');
-  src: url('../fonts/forum-font.eot?4305240#iefix') format('embedded-opentype'),
-       url('../fonts/forum-font.woff2?4305240') format('woff2'),
-       url('../fonts/forum-font.woff?4305240') format('woff'),
-       url('../fonts/forum-font.ttf?4305240') format('truetype'),
-       url('../fonts/forum-font.svg?4305240#forum-font') format('svg');
+  src: url('../fonts/forum-font.eot?2479773');
+  src: url('../fonts/forum-font.eot?2479773#iefix') format('embedded-opentype'),
+       url('../fonts/forum-font.woff2?2479773') format('woff2'),
+       url('../fonts/forum-font.woff?2479773') format('woff'),
+       url('../fonts/forum-font.ttf?2479773') format('truetype'),
+       url('../fonts/forum-font.svg?2479773#forum-font') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -59,3 +59,4 @@
 .icon-upvote:before { content: '\f005'; } /* '' */
 .icon-comments:before { content: '\f03d'; } /* '' */
 .icon-viewed:before { content: '\f082'; } /* '' */
+.icon-left:before { content: '\f177'; } /* '' */
