--- a/resources/css/thread.css
+++ b/resources/css/thread.css
@@ -394,7 +394,23 @@ html,body {
 	font-size: 0.65em;
 }
 
+.comment-subject {
+	outline: 0;
+	border: 1px solid #4E4E4E;
+	box-shadow: 0px 0px 2px 1px black;
+	padding: 10px;
+	font-size: 14px;
+	background: #2A2A2A;
+	color: white;
+	width: 50%;
+	min-width: 307px;
+	resize: none;
+	transition: box-shadow 0.25s;
+}
 
+.comment-subject:focus {
+	box-shadow: 0px 0px 4px 1px rgba( 255, 158, 0, 0.2 );
+}
 
 @media(min-height: 470px) {
 	.my-avatar {
