--- a/resources/css/thread.css
+++ b/resources/css/thread.css
@@ -412,6 +412,10 @@ html,body {
 	box-shadow: 0px 0px 4px 1px rgba( 255, 158, 0, 0.2 );
 }
 
+#thread-main-edit {
+	display: none;
+}
+
 @media(min-height: 470px) {
 	.my-avatar {
 		display: block;
